--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 venv/
 test.py
 Portfolio.docx
-!static/style.css
-static
+static/Company Analysis
+static/Web Scraping
+.gitignore
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
